Displaying data on the main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MakeUpApiApplication</string>
+    <string name="product_image">Product image</string>
 </resources>
